--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ android {
 
 dependencies {
 
+    implementation project(":core")
+
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.1'
@@ -60,14 +62,15 @@ dependencies {
 
     //Hilt-Dagger
     implementation("com.google.dagger:hilt-android:2.44")
+    implementation 'androidx.room:room-common:2.5.0'
+    implementation 'androidx.room:room-ktx:2.5.0'
     kapt("com.google.dagger:hilt-android-compiler:2.44")
 
     //Room
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
-    kapt("androidx.room:room-compiler:$room_version")
     implementation "androidx.room:room-ktx:$room_version"
-
+    kapt("androidx.room:room-compiler:$room_version")
 
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
