--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         compose_ui_version = '1.3.3'
-        room_version = '1.5.0'
+        room_version = '2.5.0'
         hilt_version = '2.42.2'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
@@ -11,6 +11,7 @@ plugins {
     id 'com.android.library' version '7.4.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
     id "com.google.dagger.hilt.android" version "2.44" apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.7.0' apply false
 }
 
 task clean(type: Delete) {
