--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,12 +53,14 @@ dependencies {
     implementation project(":core")
 
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.3.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
 
     //Hilt-Dagger
     implementation("com.google.dagger:hilt-android:2.44")
@@ -76,6 +78,24 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.4"
+
+    // Navigator
+    implementation "cafe.adriel.voyager:voyager-navigator:$currentVersion"
+
+    // BottomSheetNavigator
+    implementation "cafe.adriel.voyager:voyager-bottom-sheet-navigator:$currentVersion"
+
+    // TabNavigator
+    implementation "cafe.adriel.voyager:voyager-tab-navigator:$currentVersion"
+
+    // Transitions
+    implementation "cafe.adriel.voyager:voyager-transitions:$currentVersion"
+
+    // Android ViewModel integration
+    implementation "cafe.adriel.voyager:voyager-androidx:$currentVersion"
+
+    // Hilt integration
+    implementation "cafe.adriel.voyager:voyager-hilt:$currentVersion"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
