--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
         compose_ui_version = '1.3.3'
         room_version = '2.5.0'
         hilt_version = '2.42.2'
+        currentVersion = '1.0.0-rc03'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
